added back to top button

--- a/Dracomaton.html
+++ b/Dracomaton.html
@@ -310,7 +310,7 @@
     </script>
 
     <footer id="footer"></footer> -->
-
+    <p id="backToTop" class="btn">Top</p>
     <footer id="footer"></footer>
 </body>
 
