--- a/FirewiseCitizen.html
+++ b/FirewiseCitizen.html
@@ -217,6 +217,7 @@
     </script>
 
     <div id="footer"></div> -->
+    <p id="backToTop" class="btn">Top</p>
     <footer id="footer"></footer>
 </body>
 
