--- a/Gull-Tastrophe.html
+++ b/Gull-Tastrophe.html
@@ -25,7 +25,7 @@
 </head>
 
 <body class="background-page">
-    <!-- <header id="header"></header> -->
+    <header id="header"></header>
 
 
     <section class="project-card">
@@ -170,6 +170,7 @@
             </p>
         </div>
     </section>
+    <p id="backToTop" class="btn">Top</p>
     <footer id="footer"></footer>
 </body>
 
