--- a/about.html
+++ b/about.html
@@ -38,6 +38,7 @@
             Fun fact about me: <em>I can bake very delicious cookies :D</em>
         </p>
     </section>
+    <p id="backToTop" class="btn">Top</p>
     <div id="footer"></div>
 </body>
 
