--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </div>
                 </a>
                 
-                <a href="FiresafeFriend.html" target="_blank" class="projects-col">
+                <!-- <a href="FiresafeFriend.html" target="_blank" class="projects-col">
                     <img src="images/ATCCover.gif" alt="Alert The City">
                     <div class="tags">
                         <p class="tag1">C#</p>
@@ -77,7 +77,7 @@
                             This project is a 3D two player strategy game. I programmed the whole game.
                         </p>
                     </div>
-                </a>
+                </a> -->
                 
                 <a href="FirewiseCitizen.html" target="_blank" class="projects-col">
                     <img src="images/ATCCover.gif" alt="Alert The City">
@@ -138,7 +138,7 @@
 
         </section>
     </main>
-
+    <p id="backToTop" class="btn">Top</p>
     <footer id="footer"></footer>
 </body>
 <!-- <body>
