--- a/FiresafeFriend.html
+++ b/FiresafeFriend.html
@@ -167,7 +167,7 @@
             </div>
         </div>
     </section>
-
+    <p id="backToTop" class="btn">Top</p>
     <footer id="footer"></footer>
 </body>
 
