--- a/footer.html
+++ b/footer.html
@@ -14,4 +14,23 @@
         <p class="footer-copyright">&copy; 2025 Yiyang Lu. All Rights Reserved.</p>
     </div>
 
+  <!-- <script>
+    // Show button when scrolled down 100px
+    window.onscroll = function() {
+      let button = document.getElementById("backToTop");
+      if (document.documentElement.scrollTop > 100) {
+        button.style.display = "block";
+      } else {
+        button.style.display = "none";
+      }
+    };
+  
+    // Scroll to the top when clicked
+    document.getElementById("backToTop").onclick = function() {
+      window.scrollTo({
+        top: 0,
+        behavior: "smooth"
+      });
+    };
+  </script> -->
 </section>
