--- a/header.html
+++ b/header.html
@@ -13,7 +13,8 @@
         <div class="nav-links" id="navLinks">
             <i class="fa fa-times-circle close-icon" onclick="hideMenu()"></i>
             <ul>
-                <li><a href="Yiyang Lu Resume.pdf">RESUME</a></li>
+                
+                <li><a href="Yiyang Lu Resume.pdf" target="_blank">RESUME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="index.html">WORKS</a></li>
             </ul>
