--- a/FiresafeFriend.html
+++ b/FiresafeFriend.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Alert The City</title>
+    <title>Firesafe Friend</title>
     <script src="utils.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -39,7 +39,7 @@
         <div class="media-info-container">
             <!-- Main Media Section (Video) -->
             <div class="project-media">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/xzruZTOCWBA?si=iw5Fzo6sCWWddpcN?autoplay=1&mute=1"
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/VeHHFzyTDXg?si=bsf1sqMqPXZNsAIO"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
