--- a/FirewiseCitizen.html
+++ b/FirewiseCitizen.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Alert The City</title>
+    <title>Firewise Citizen</title>
     <script src="utils.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -39,7 +39,7 @@
         <div class="media-info-container">
             <!-- Main Media Section (Video) -->
             <div class="project-media">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/t7fVVt7Okl8?si=UxZC46fyqzJG5CNO"
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/VeHHFzyTDXg?si=bsf1sqMqPXZNsAIO"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -159,7 +159,7 @@
             </p>
             <div class="contribution-image-container">
                 <img src="images/HouseInfo.png" alt="Interactive Choice Example" class="contribution-image" />
-                <img src="images/ATC_HouseMenu.gif" alt="Interactive Choice Example" class="contribution-image" />
+                <img src="images/narrative.gif" alt="Interactive Choice Example" class="contribution-image" />
             </div>
         </div>
     </section>
