--- a/FirewiseCitizen.html
+++ b/FirewiseCitizen.html
@@ -30,10 +30,10 @@
 
         <!-- Project Header Section -->
         <div class="project-header">
-            <h1 class="project-name"> Firewise Citizen (2024)</h1>
+            <h1 class="project-name"> Firewise Citizen</h1>
             <p class="project-role"> Solo Programmer</p>
             <a href="https://ucsc-wildfire-games.itch.io/firewise-citizens" target="_blank" class="play-button">Play
-                On Itch</a>
+                on Itch.io</a>
         </div>
         <!-- Media and Info Container for Flex Layout -->
         <div class="media-info-container">
@@ -57,7 +57,7 @@
                 <!-- About Section -->
                 <div class="project-description">
                     <h2>About</h2>
-                    <p>Alert the City is a 3D top-down traffic simulation and educational game that teaches players
+                    <p>Firewise Citizen is a 3D top-down traffic simulation and educational game that teaches players
                         about wildfire evacuation. Players act as community leaders making critical decisions
                         during a wildfire evacuation to avoid loss and ensure safety. Each choice directly impacts the
                         evacuation’s final outcome, offering valuable lessons on emergency preparedness and response.
@@ -71,7 +71,7 @@
                     <p><strong>Team size:</strong> 2 </p>
                     <p><strong>Engine:</strong> Unity</p>
                     <p>I’m responsible for coding all the systems in this game and connecting them together. There are
-                        three core systems in this game: Fire simulation, Traffic simulation, and Context-based Options
+                        three core systems in this game: Fire simulation, Traffic simulation, and Branching Narrative.
                     </p>
                 </div>
             </div>
@@ -142,7 +142,7 @@
                 <img src="images/ATC_Wind.gif" alt="Fire Simulation Example" class="contribution-image" />
             </div>
 
-            <h3>Interactive Choice</h3>
+            <h3>Branching Narrative</h3>
             <p>For player making choices for the community (the core game play) , I used a <code>HouseTypeInfo</code>
                 object to
                 manage each house’s information, including the choices.( <code>HouseChoice</code> class) Each choice
