--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                     </div>
                 </a>
                 
-                <!-- <a href="FiresafeFriend.html" target="_blank" class="projects-col">
-                    <img src="images/ATCCover.gif" alt="Alert The City">
+                <a href="FiresafeFriend.html" target="_blank" class="projects-col">
+                    <img src="images/FFCover.gif" alt="Firesafe Friend">
                     <div class="tags">
                         <p class="tag1">C#</p>
                         <p class="tag2">Unity</p>
@@ -77,10 +77,10 @@
                             This project is a 3D two player strategy game. I programmed the whole game.
                         </p>
                     </div>
-                </a> -->
+                </a>
                 
                 <a href="FirewiseCitizen.html" target="_blank" class="projects-col">
-                    <img src="images/ATCCover.gif" alt="Alert The City">
+                    <img src="images/ATCCover.gif" alt="Firewise Citizen">
                     <div class="tags">
                         <p class="tag1">C#</p>
                         <p class="tag2">Unity</p>
