--- a/Dracomaton.html
+++ b/Dracomaton.html
@@ -41,7 +41,7 @@
         <div class="media-info-container">
             <!-- Main Media Section (Video) -->
             <div class="project-media">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/uWLFIssG7Ns?si=NHplrJCy-tAWQtSX?autoplay=1&mute=1"
+                <iframe src="https://www.youtube.com/embed/uWLFIssG7Ns?si=NHplrJCy-tAWQtSX?autoplay=1&mute=1"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
