--- a/FiresafeFriend.html
+++ b/FiresafeFriend.html
@@ -40,7 +40,7 @@
         <div class="media-info-container">
             <!-- Main Media Section (Video) -->
             <div class="project-media">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/taFrtuP4-QU?si=0ZqBzop1ZA0o2QBV"
+                <iframe src="https://www.youtube.com/embed/taFrtuP4-QU?si=0ZqBzop1ZA0o2QBV"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
