--- a/FirewiseCitizen.html
+++ b/FirewiseCitizen.html
@@ -39,7 +39,7 @@
         <div class="media-info-container">
             <!-- Main Media Section (Video) -->
             <div class="project-media">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/VeHHFzyTDXg?si=bsf1sqMqPXZNsAIO"
+                <iframe  src="https://www.youtube.com/embed/VeHHFzyTDXg?si=bsf1sqMqPXZNsAIO"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -68,7 +68,7 @@
                 <div class="project-overview">
                     <h2>Project Overview</h2>
                     <p><strong>Role:</strong> Gameplay & UI Programmer</p>
-                    <p><strong>Team size:</strong> 2 </p>
+                    <p><strong>Team size:</strong> 5 </p>
                     <p><strong>Engine:</strong> Unity</p>
                     <p>I’m responsible for coding all the systems in this game and connecting them together. There are
                         three core systems in this game: Fire simulation, Traffic simulation, and Branching Narrative.
