--- a/Gull-Tastrophe.html
+++ b/Gull-Tastrophe.html
@@ -41,7 +41,7 @@
             <!-- Main Media Section (Video) -->
             <div class="project-media">
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/ila6mWyYMIg?si=hNWerYUvbcgK2teO"
+                <iframe src="https://www.youtube.com/embed/ila6mWyYMIg?si=hNWerYUvbcgK2teO"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
