update FF and FC links

--- a/FirewiseCitizen.html
+++ b/FirewiseCitizen.html
@@ -32,7 +32,7 @@
         <div class="project-header">
             <h1 class="project-name"> Firewise Citizen</h1>
             <p class="project-role"> Solo Programmer</p>
-            <a href="https://ucsc-wildfire-games.itch.io/firewise-citizens" target="_blank" class="play-button">Play
+            <a href="https://ucsc-wildfire-games.itch.io/wildfire-minigames-collection" target="_blank" class="play-button">Play
                 on Itch.io</a>
         </div>
         <!-- Media and Info Container for Flex Layout -->
