updated resume and project name

--- a/FirewiseCitizen.html
+++ b/FirewiseCitizen.html
@@ -30,8 +30,8 @@
 
         <!-- Project Header Section -->
         <div class="project-header">
-            <h1 class="project-name"> Firewise Citizen</h1>
-            <p class="project-role"> Solo Programmer</p>
+            <h1 class="project-name"> Firewise Residents</h1>
+            <p class="project-role"> Lead Programmer</p>
             <a href="https://ucsc-wildfire-games.itch.io/wildfire-minigames-collection" target="_blank" class="play-button">Play
                 on Itch.io</a>
         </div>
@@ -67,7 +67,7 @@
                 <!-- Project Overview Section -->
                 <div class="project-overview">
                     <h2>Project Overview</h2>
-                    <p><strong>Role:</strong> Gameplay & UI Programmer</p>
+                    <p><strong>Role:</strong> Lead Programmer</p>
                     <p><strong>Team size:</strong> 5 </p>
                     <p><strong>Engine:</strong> Unity</p>
                     <p>I’m responsible for coding all the systems in this game and connecting them together. There are
