--- a/Gull-Tastrophe.html
+++ b/Gull-Tastrophe.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Gull-Tastrophe</title>
+    <title>Gulltastrophe</title>
     <script src="utils.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -59,7 +59,7 @@
                 <!-- About Section -->
                 <div class="project-description">
                     <h2>About</h2>
-                    <p>Gull-Tastrophe is a 3D funny action-adventure game that lets players act as a seagull to poop and
+                    <p>Gulltastrophe is a 3D funny action-adventure game that lets players act as a seagull to poop and
                         create chaos everywhere. Enjoy life being a seagull and do whatever you want. The goal is to
                         beat the human out of your home island!
                     </p>
