--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!-- Project Items-->
             <div class="project-row">
                 <a href="Gull-Tastrophe.html" target="_blank" class="projects-col">
-                    <img src="images/GullCover.gif" alt="Gull-Tastrophe">
+                    <img src="images/GullCover.gif" alt="Gulltastrophe">
                     <div class="tags">
                         <p class="tag1">C++ & Blueprint</p>
                         <p class="tag2">Unreal</p>
@@ -54,7 +54,7 @@
                     </div>
 
                     <div class="project-details">
-                        <h3 class="project-title">Gull-Tastrophe (2025)</h3>
+                        <h3 class="project-title">Gulltastrophe (2025)</h3>
                         <p class="project-role">Gameplay Programmer</p>
                         <p class="project-description">
                             This project is a 3D Light Action-Adventure Seagull Game. I developed part of the gameplay and system.
@@ -63,7 +63,7 @@
                 </a>
                 
                 <a href="FiresafeFriend.html" target="_blank" class="projects-col">
-                    <img src="images/FFCover.gif" alt="Firesafe Friend">
+                    <img src="images/FFCover.gif" alt="Firesafe Friends">
                     <div class="tags">
                         <p class="tag1">C#</p>
                         <p class="tag2">Unity</p>
@@ -71,7 +71,7 @@
                     </div>
 
                     <div class="project-details">
-                        <h3 class="project-title">Firesafe Friend (2025)</h3>
+                        <h3 class="project-title">Firesafe Friends (2025)</h3>
                         <p class="project-role">Solo Programmer</p>
                         <p class="project-description">
                             This project is a 3D two player strategy game. I programmed the whole game.
@@ -80,7 +80,7 @@
                 </a>
                 
                 <a href="FirewiseCitizen.html" target="_blank" class="projects-col">
-                    <img src="images/ATCCover.gif" alt="Firewise Citizen">
+                    <img src="images/ATCCover.gif" alt="Firewise Residents">
                     <div class="tags">
                         <p class="tag1">C#</p>
                         <p class="tag2">Unity</p>
